# GameEngine

./: .gitignore  .gitmodules  Build.bat  CMakeLists.txt  Editor.bat  Game.bat  Game.sln  LICENSE  LICENSE_3rdparty.txt  README.md  Setup.bat  TemporaryFile.txt  TemporaryFile2.txt  Work.bat
Binaries/: Game.ilk  assimp-vc140-mt.dll.REMOVED.git-id
Dependencies/: GetDependencies.bat  ViewDependencyGraph.bat  conanfile.txt
Editor-GL/: Editor-GL.vcxproj  Editor-GL.vcxproj.filters  Editor.cpp  Editor.h  EditorGameControls.cpp  EditorGameControls.h  Main.cpp
EngineCore/: EngineCore.vcxproj  EngineCore.vcxproj.filters  IGame.cpp  IGame.h  Main.cpp  MainGLFW.cpp  MainGLFW.h  MainOGLEntry.cpp  MainOgl.cpp  MainOgl.h  MainWinOgl.cpp  MainWinOgl.h
Game/: Debug.txt  Game.cpp  Game.h  Game.vcxproj  Game.vcxproj.filters  GameControls.cpp  GameControls.h  packages.config
Game-Editor/: Form1.Designer.cs  Form1.cs  Game-Editor.csproj  Program.cs  RenderEngineAPI.cs
GameDLL/: Game.cpp  Game.h  GameDLL.vcxproj  GameDLL.vcxproj.filters  dllmain.cpp
Graphics/: CAnimatedModelOGL.cpp  CAnimatedModelOGL.h  CCamera.cpp  CCamera.h  CCubeTextureOGL.cpp  CCubeTextureOGL.h  CModelOGL.cpp  CModelOGL.h  CParticle.cpp  CParticle.h  CRendererOGL.cpp  CRendererOGL.h  CTextureOGL.cpp  CTextureOGL.h  Graphics.vcxproj  Graphics.vcxproj.filters  I2dImage.cpp  I2dImage.h  IDrawable.h  IModel.cpp  IModel.h  IRenderer.cpp  IRenderer.h  ITexture.h  TextArea2D.cpp  TextArea2D.h  TextRenderer.cpp  TextRenderer.h  Widget.h  WidgetTransforms.h  Window2D.cpp  Window2D.h
Includes/: CBmp.h  CClockOGL.h  CFactory2dImage.h  CGameController.h  CModelHolder.h  CModelOGL.h  CRendererOGL.h  CResHandle.h  CShaderHolder.h  CTextureHolder.h  CTextureOGL.h  CWinSocket.h  CommonTypes.h  Debugger.h  I2dImage.h  IEventInput.h  IGame.h  IKeyboardHandler.h  IModel.h  IMutex.h  IRenderer.h  IResourceFile.h  ISocket.h  ITexture.h  IvLine3.h  IvMath.h  IvMatrix44.h  IvPlane.h  IvPoint.h  IvRay3.h  IvVector3.h  OGLTypes.h  ZipFile.h  glsl.h
Libs/: Graphics.lib  Math.lib  UtilitiesCore.lib  libpng16.lib
Math/: AABB.cpp  AABB.h  CommonMath.h  IvGaussianElim.cpp  IvLine3.cpp  IvLineSegment3.cpp  IvLineSegment3.h  IvMath.vcxproj  IvMath.vcxproj.filters  IvMatrix33.cpp  IvMatrix33.h  IvMatrix44.cpp  IvMatrix44.h  IvPlane.cpp  IvQuat.cpp  (+11 more)
UtilitiesCore/: CClockOGL.cpp  CClockOGL.h  CMakeLists.txt  CommonTypes.h  Debugger.cpp  Debugger.h  IClock.cpp  IClock.h  InvalidTexture.cpp  InvalidTexture.h  OGLTypes.h  SocketUtils.cpp  SocketUtils.h  UtilitiesCore.vcxproj  UtilitiesCore.vcxproj.filters
UtilitiesCore/Debug/: UtilitiesCore.idb  UtilitiesCore.lib
UtilitiesCore/Debug/UtilitiesCore.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  lib.command.1.tlog
UtilitiesCore/Logger/: ILogger.cpp  ILogger.h
UtilitiesCore/Rendered/: SceneItemBoundingBox.cpp  SceneItemBoundingBox.h  Skybox.cpp  Skybox.h
UtilitiesCore/Serializer/: SerializationRecipe.h  Serializer.h
UtilitiesCore/Shaders/: glsl.cpp  glsl.h
(+258 files in other folders)
